--- a/Ho v Minton/index.html
+++ b/Ho v Minton/index.html
@@ -14,9 +14,12 @@
 
 
     <span style="font-style:normal">
-        <a href="https://odyportal-ext.sanmateocourt.org/Portal-External/DocumentViewer/DownloadDocumentFile/Download?d=490C34C289174B10B0A2430B36BAE868&amp;c=5C685B4DDA15221BE8D090CDC66CE8F4&amp;l=5C7BB1FC59B46663C06A5F51B72DDDDC&amp;cn=A2811199BBF29F7CB8934FF5D91B6938&amp;fileName=19-CIV-07253%20-%20First%20Amended%20Complaint&amp;docTypeId=3&amp;isVersionId=False" target="_blank">First Amended Complaint (full document)</a>
+        Here is the <a href="./Ho v Minton_docs/1st%20Amended%20Complaint%20(Negligence%20and%20Breach%20of%20Contract)%20filed%201-31-20%20(partial).pdf" target="_blank">complaint section</a> of the First Amended Complaint.
         <br>
-        <a href="https://odyportal-ext.sanmateocourt.org/Portal-External/DocumentViewer/Index/3E67E3790D83E1414A7D78E2B601DA88367E9CD5D40EBE541130BF79DAE4EC82738D70571C921BFAC330752D81E55BAAA9FD7B929A957DAB46EA6EA8853FF18640995C5B56122491CB78C7527CB6BE9D?caseNum=19-CIV-07253&amp;docType=Public&amp;docName=First%20Amended%20Complaint&amp;eventName=First%20Amended%20Complaint&amp;docTypeId=3&amp;isVersionId=False&amp;p=0" target="_blank">Link to First Amended Complaint on Court website</a> <br>
+		<a href="https://odyportal-ext.sanmateocourt.org/Portal-External/DocumentViewer/DownloadDocumentFile/Download?d=490C34C289174B10B0A2430B36BAE868&amp;c=5C685B4DDA15221BE8D090CDC66CE8F4&amp;l=5C7BB1FC59B46663C06A5F51B72DDDDC&amp;cn=A2811199BBF29F7CB8934FF5D91B6938&amp;fileName=19-CIV-07253%20-%20First%20Amended%20Complaint&amp;docTypeId=3&amp;isVersionId=False" target="_blank">First Amended Complaint (full document)</a>
+        <br>
+        <a href="https://odyportal-ext.sanmateocourt.org/Portal-External/DocumentViewer/Index/3E67E3790D83E1414A7D78E2B601DA88367E9CD5D40EBE541130BF79DAE4EC82738D70571C921BFAC330752D81E55BAAA9FD7B929A957DAB46EA6EA8853FF18640995C5B56122491CB78C7527CB6BE9D?caseNum=19-CIV-07253&amp;docType=Public&amp;docName=First%20Amended%20Complaint&amp;eventName=First%20Amended%20Complaint&amp;docTypeId=3&amp;isVersionId=False&amp;p=0" target="_blank">Link to First Amended Complaint on Court website</a>
+		<br>
         <br>
         <a href="./Ho v Minton_docs/Request%20for%20Arbitration%20of%20a%20Fee%20Dispute%20filed%2012-10-19.pdf" target="_blank">Request for Arbitration of a Fee Dispute</a><br>
         <br>
